--- a/.github/workflows/update-ExchangeRate.yml
+++ b/.github/workflows/update-ExchangeRate.yml
@@ -23,4 +23,6 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git add latest.json
           git commit -m "Atualizar câmbios automaticamente [ci skip]" || echo "Sem alterações"
+          git pull --rebase https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git main
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
+
